# ai-laser-show-creation

./: pnpm-lock.yaml
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  ai-show-director-variables.md  ai-show-token-limit.md  dmx-arc-sharing.md  github-release-workflow.md
.github/workflows/: release.yml
artifacts/api-server/src/routes/: index.ts  laser.ts
artifacts/lasershow-web/: index.html  package.json  tsconfig.json
artifacts/lasershow-web/.replit-artifact/: artifact.toml
artifacts/lasershow-web/src/: index.css
artifacts/lasershow-web/src/lib/: audio-engine.ts  laser-database.ts  show-engine.ts  (+1 more)
attached_assets/: Pasted-5s-2s-2m-0s-Run-tauri-apps-tauri-action-v0-running-npm-_1782715354556.txt  Pasted-AI-Show-Director-12-overrides-active-reset-make-a-4th-o_1782711681233.txt  Pasted-Run-tauri-apps-tauri-action-v0-running-npm-run-tauri-bu_1782706825933.txt  Pasted-Run-tauri-apps-tauri-action-v0-running-npm-run-tauri-bu_1782707810257.txt  Pasted-The-EYTSE-EY003-L-is-a-2-Watt-programmable-RGB-3D-anima_1782712195561.txt  Pasted-You-are-an-expert-full-stack-Python-engineer-and-hardwa_1782702785983.txt  Pasted-You-are-an-expert-systems-engineer-and-cross-platform-d_1782702940944.txt  Pasted-make-an-exciting-4th-of-july-show-using-this-music-only_1782713871373.txt
laser-show/: README.md  package.json
laser-show/.github/workflows/: release.yml
laser-show/src/: index.html  main.js  styles.css
laser-show/src-tauri/: Cargo.toml  tauri.conf.json
laser-show/src-tauri/icons/: icon.icns
laser-show/src-tauri/src/: audio.rs  dmx.rs  main.rs
(+1 files in other folders)
