[package]
name = "ai-lasershow-client"
version = "0.1.0"
description = "AI LaserShow Client — music-driven DMX512 light show generator"
authors = []
license = ""
repository = ""
default-run = "ai-lasershow-client"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "ai-lasershow-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
rodio = { version = "0.17", features = ["mp3", "wav"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg"] }
symphonia-format-ogg = "0.5"
symphonia-codec-vorbis = "0.5"
rustfft = "6"
num-complex = "0.4"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
